# portfolio_named_entity_recognition

./: .dockerignore  .gitignore  Dockerfile  NOTES.md  README.md  TASK_DESCRIPTION.md  TODO.md  docker-compose.yml  load-test-report.html  locustfile.py  poetry.toml  pyproject.toml  run-docker.bat  run-docker.sh  run_locust.py  setup.sh  test_toptal_metrics.py
files/: bert_training_results.json  finetune_data.txt  full_data_clean.csv  full_data_clean_finetune.csv  full_data_clean_finetune_2.csv  model_evaluation_results.csv  ner_annotations.bkp.json  ner_annotations.conll  ner_annotations.conll.bkp  ner_annotations.json  ner_annotations_1.conll  ner_annotations_2.conll  ner_annotations_2.json  ner_annotations_3.conll  ner_annotations_3.json  ner_annotations_combined.conll  semantic_eval_chunks_first5.json  semantic_splitting_test_results.json
junk/: 02_data_splitting.ipynb  04_00_finetune_bert_faulty.py  04_02_finetune_bert_kaggle_cnn.py  05_evaluation_models_all.py  ner_annotations.conll  ner_annotations.json
notebooks/: 00_data_exploration.ipynb  00_data_exploration.py  01_data_preparation.ipynb  01_data_preparation.py  02_data_splitting.ipynb  02_data_splitting.py  03_data_ner_conversion.ipynb  03_data_ner_conversion.py  04_01_finetune_bert_kaggle.py  04_01_finetune_bert_weighted.py  04_02_finetune_bert_kaggle_cnn.py  04_02_finetune_bert_weighted.py  04_03_finetune_bert_corrected.py  04_03_finetune_bert_faulty_2.py  04_03_finetune_bert_weighted.py  04_finetune_bert.ipynb  04_finetune_bert.py  05_01_evaluation_single_pass.py  05_02_evaluation_multi_pass.py  test.txt  (+19 more)
(+56 files in other folders)
