[project]
name            = "take-home-assignment"
version         = "0.1.0"
description     = ""
authors         = [{ name = "OluPredator", email = "o.hundogan@gmail.com" }]
readme          = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "transformers (>=4.53.3,<5.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "markdownify (>=1.1.0,<2.0.0)",
    "dataset (>=1.6.2,<2.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "accelerate (>=1.9.0,<2.0.0)",
    "seqeval (>=1.2.2,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-text-splitters (>=0.3.9,<0.4.0)"
    ]

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
torch = {version = "^2.7.1", source = "torch-cu128"}
torchvision = {version = "^0.22.1", source = "torch-cu128"}
torchaudio = {version = "^2.7.1", source = "torch-cu128"}

[[tool.poetry.source]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "supplemental"


[build-system]
requires    = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
